--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,12 @@
+2007-10-24  David Hyatt  <hyatt@apple.com>
+
+        Make repainting work with transforms.
+
+        Reviewed by John Sullivan
+
+        * rendering/RenderBox.cpp:
+        (WebCore::RenderBox::computeAbsoluteRepaintRect):
+
 2007-10-23  Alp Toker  <alp@atoker.com>
 
         Reviewed by Maciej.
