Fix pathByAppendingComponent for the Qt port.
git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26953 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,11 @@
+2007-10-24  Simon Hausmann  <hausmann@kde.org>
+
+        Reviewed by Lars.
+
+        Make the implementation of pathByAppendingComponent use QDir.
+
+        * platform/qt/FileSystemQt.cpp:
+
 2007-10-24  David Hyatt  <hyatt@apple.com>
 
         Make repainting work with transforms.
