Reviewed by Eric.
        * kjs/object.cpp: (KJS::JSObject::defaultValue): Get rid of a little
        Identifier ref/deref for what SunSpider claims is a 0.4% speedup.



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26959 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,5 +1,12 @@
 2007-10-24  Darin Adler  <darin@apple.com>
 
+        Reviewed by Eric.
+
+        * kjs/object.cpp: (KJS::JSObject::defaultValue): Get rid of a little
+        Identifier ref/deref for what SunSpider claims is a 0.4% speedup.
+
+2007-10-24  Darin Adler  <darin@apple.com>
+
         Reviewed by Maciej.
 
         - separate out the code to create a hash table the first time from the code
