2007-10-24  Eric Seidel  <eric@webkit.org>
        Reviewed by darin.

        * kjs/nodes.h:
        (KJS::ImmediateNumberNode::): Fix ASSERT correctness (and debug build!)


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26960 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,10 @@
+2007-10-24  Eric Seidel  <eric@webkit.org>
+
+        Reviewed by darin.
+
+        * kjs/nodes.h:
+        (KJS::ImmediateNumberNode::): Fix ASSERT correctness (and debug build!)
+
 2007-10-24  Darin Adler  <darin@apple.com>
 
         Reviewed by Eric.
