--- a/WebKitTools/ChangeLog
+++ b/WebKitTools/ChangeLog
@@ -2,6 +2,15 @@
 
         Reviewed by Simon.
 
+        make the man webpage believe it has focus, so the editing tests work correctly.
+
+        * DumpRenderTree/qt/DumpRenderTree.cpp:
+        (WebCore::DumpRenderTree::DumpRenderTree):
+
+2007-10-24  Lars Knoll  <lars@trolltech.com>
+
+        Reviewed by Simon.
+
         implement layoutTestController.dumpEditingCallbacks() correctly.
 
         * DumpRenderTree/qt/DumpRenderTree.cpp:
