--- a/WebKit/qt/ChangeLog
+++ b/WebKit/qt/ChangeLog
@@ -2,6 +2,15 @@
 
         Reviewed by Simon.
 
+        no need to call setIsActive ourselves on the frame, as the focus controller does it for us.
+
+        * Api/qwebpage.cpp:
+        (QWebPage::focusInEvent):
+
+2007-10-24  Lars Knoll  <lars@trolltech.com>
+
+        Reviewed by Simon.
+
         Implement support for testing editing.
 
         * WebCoreSupport/EditorClientQt.cpp:
