remove some notImplemented() warnings.
git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26978 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKit/qt/ChangeLog
+++ b/WebKit/qt/ChangeLog
@@ -2,6 +2,17 @@
 
         Reviewed by Simon.
 
+        remove some notImplemented() warnings.
+
+        * WebCoreSupport/EditorClientQt.cpp:
+        (WebCore::EditorClientQt::isContinuousSpellCheckingEnabled):
+        (WebCore::EditorClientQt::isGrammarCheckingEnabled):
+        (WebCore::EditorClientQt::respondToChangedSelection):
+
+2007-10-24  Lars Knoll  <lars@trolltech.com>
+
+        Reviewed by Simon.
+
         allow paste from DOM so we pass more test cases.
 
         * Api/qwebpage.cpp:
