--- a/WebKitTools/ChangeLog
+++ b/WebKitTools/ChangeLog
@@ -2,6 +2,14 @@
 
         Reviewed by Simon.
 
+        add a layoutTestController.dumpSelectionRect() dummy. It only has an effect on mac pixel tests anyway. Makes us pass another 5 test cases.
+
+        * DumpRenderTree/qt/jsobjects.h:
+
+2007-10-24  Lars Knoll  <lars@trolltech.com>
+
+        Reviewed by Simon.
+
         add another command.
 
         * DumpRenderTree/qt/jsobjects.cpp:
