* Stop crashing on fast/events/frame-tab-focus.html the keyEvent can be 0.
Signed-off-by: Lars Knoll <lars@trolltech.com>


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@26984 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKit/qt/ChangeLog
+++ b/WebKit/qt/ChangeLog
@@ -1,3 +1,13 @@
+2007-10-24  Holger Hans Peter Freyther  <zecke@selfish.org>
+
+        Reviewed by Lars Knoll <lars@trolltech.com>.
+
+        * Stop crashing on fast/events/frame-tab-focus.html the keyEvent can be 0.
+        
+
+        * WebCoreSupport/EditorClientQt.cpp:
+        (WebCore::EditorClientQt::handleKeypress):
+
 2007-10-24  Lars Knoll  <lars@trolltech.com>
 
         Reviewed by Simon.
