--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,9 @@
+2007-10-24  Mark Rowe  <mrowe@apple.com>
+
+        Gtk build fix.
+
+        * kjs/identifier.h:  Remove extra qualification.
+
 2007-10-24  Geoffrey Garen  <ggaren@apple.com>
 
         Reviewed by Sam Weinig.
